Forced vertical layout,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
 					android:resource="@xml/search_widget_info" />
 		</receiver>
 
-		<activity android:name=".MainActivity">
+		<activity
+				android:name=".MainActivity"
+				android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
